--- a/Assignment_1/index.css
+++ b/Assignment_1/index.css
@@ -1,55 +1,65 @@
-.parent{
-    display: flex;
-    /* flex-direction: column; */
-    width: 100vw;
-    
+* {
+    font-family: "Calibri", "times";
 }
-.center{
+
+.heading {
+    font-family: 'Alfa Slab One';
+    font-size: 22px;
+}
+
+.parent {
+    display: flex;
+    width: 100vw;
+}
+
+.center {
     text-align: center;
 }
-.justify{
-    text-align:justify;
+
+.justify {
+    text-align: justify;
     padding-right: 20px;
 }
-.text{
+
+.text {
     padding: auto;
     padding-left: 50px;
     padding-top: 20px;
 }
-.image2{
+
+.image2 {
     padding-top: 15px;
     padding-bottom: 20px;
 }
+
 .font {
     font-family: "Times New Roman", Times, serif;
 }
 
-.wordspacing{
+.wordspacing {
     word-spacing: 5px;
 }
 
-.linespacing{
+.linespacing {
     line-height: 22px;
 }
-  
 
-.left{
+.left {
     padding-top: 50px;
     width: 30%;
     padding-left: 20px;
-    background-color: rgb(124,209,205,255)
+    background-color: rgb(124, 209, 205, 255);
 }
 
-.right{
+.right {
     padding-top: 20px;
     padding-left: 40px;
     width: 70%;
-    background-color: white
-
+    background-color: white;
 }
 
-.edu{
-    border: 3px solid rgb(124,209,205,255);
+.edu {
+    border: 3px solid rgb(124, 209, 205, 255);
     border-width: 0 120px;
     padding: 3px;
     background-color: rgb(164, 164, 165);
@@ -58,65 +68,130 @@
     padding-right: 10px;
     font-size: 18px;
     font-weight: bold;
-
 }
-.fontsize{
+
+.fontsize {
     font-size: 20px;
 }
 
-.image1{
+.image1 {
     border-radius: 120px;
     display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
-  
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
 }
 
-.subright{
+.subright {
     display: flex;
- 
 }
 
 .icon {
-    font-size: 1.2em; 
-    vertical-align: middle; /* Align the icon vertically with text */
-    margin-right: 0.5em; 
-  }
+    font-size: 1.2em;
+    vertical-align: middle;
+    margin-right: 0.5em;
+}
 
-  .image-container {
-          display: flex;
-          justify-content: space-between;
-          padding: 20px;
-      }
+.image-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
 
-      .image-card {
-          flex: 0 0 30%; 
-          /* This property is shorthand for flex-grow, flex-shrink, and flex-basis */
-          text-align: center;
-      }
+.image-card {
+    flex: 0 0 30%;
+    text-align: center;
+}
 
-      .skills-container {
-          list-style: none;
-          padding: 5px;
-          display: flex;
-          justify-content: space-around;
-
-      }
-
-      .skill {
-          display: flex;
-          align-items: center;
-          color: #333333; 
-          height: 2px;
-          margin-left: 1px;
+.skills-container {
+   margin: 5px;
+   padding: 1px;
+    list-style: none;
+    padding-left: 0; /* Reset padding for the container */
+    display: flex; /* This will align items in a row */
+    flex-wrap: wrap; /* This allows items to wrap to the next line */
+    justify-content: flex-start; /* Aligns items to the start of the container */
+    gap: 10px 20px; /* Space between rows and items, adjust as needed */
+}
 
 
-      }
-      /* used to insert a green round circle before the skill text. */
-      .skill::before {
-          content: '\2022'; /* Unicode character for a bullet (circle) */
-          font-size: 60px;
-          margin-right: 10px; /* Adjust the spacing between the circle and text */
-          color: #4CAF50; 
-      }
+.skill {
+    display: flex;
+    align-items: center;
+    margin-right: 15px; /* Space after each bullet text, adjust as needed */
+    color: #333333;
+}
+
+.skill::before {
+    content: '\2022'; /* Unicode character for a bullet */
+    color: #4CAF50; /* Bullet color */
+    font-size: 40px; /* Bullet size */
+    padding-right: 10px; /* Space between the bullet and the text */
+    margin-top: -5px; /* Adjust vertical alignment if necessary */
+}
+.pad{
+    padding-left: 75px;
+}
+.padd{
+    padding-left: 35px;
+}
+
+.space{
+    line-height: 20px;
+    padding: 2px;
+
+}
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .parent {
+        flex-direction: column;
+    }
+
+    .left, .right {
+        width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .heading, .edu, .fontsize, .skill {
+        font-size: smaller;
+    }
+
+    .image1, .image2 {
+        width: 100%;
+        height: auto;
+    }
+
+    .subright {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .text, .justify {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .image-container {
+        flex-direction: column;
+    }
+
+    .skills-container {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 480px) {
+    .heading, .edu, .fontsize, .skill {
+        font-size: even smaller;
+    }
+
+    .image1 {
+        width: 50%;
+    }
+
+    .justify, .text {
+        text-align: justify;
+        padding: 10px;
+    }
+}
