--- a/Lab_Task_1/four.css
+++ b/Lab_Task_1/four.css
@@ -72,7 +72,7 @@ header{
     color: white;
  }
  .search-bar button:hover {
-    background-color: #45a049;
+    background-color: rgb(112, 40, 40);
 }
 
 nav{
