--- a/midterm lab/index.css
+++ b/midterm lab/index.css
@@ -1,43 +1,46 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-  }
+}
 
-  .blue-circle {
-    width: 30px; 
-    height: 30px; 
-    background-color: #509CFF; 
-    border-radius: 50%; 
-  }
- .center{
+.blue-circle {
+    width: 30px;
+    height: 30px;
+    background-color: #509CFF;
+    border-radius: 50%;
+}
+
+.center {
     text-align: center;
- }
-  .navbar {
-    background-color: white; /* Example blue color */
+}
+
+.navbar {
+    background-color: white;
     color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem 1rem;
-  }
-  .navbar a {
+}
+
+.navbar a {
     color: black;
     text-decoration: none;
     margin: 0 0.5rem;
     padding: 0.25rem 0;
     position: relative;
-  }
+}
 
-.bold{
+.bold {
     font-weight: bold;
 }
 
-.blue{
-    
+.blue {
     color: blue;
     font-weight: bolder;
 }
-.padding{
+
+.padding {
     padding-left: 35px;
     font-weight: bold;
 }
@@ -47,52 +50,58 @@ nav {
     justify-content: center;
     background-color: #303030;
     padding-right: 6%;
-    position: sticky; 
-    top: 0; 
-    z-index: 1000; 
-  }
-  
-  nav a {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+nav a {
     color: white;
     text-decoration: none;
     padding: 6px 12px;
     display: inline-block;
-  }
+}
 
-.btn1{
+.btn1 {
     background-color: blue;
 }
+
 .layout {
     padding-top: 7%;
     display: flex;
     justify-content: space-between;
-    max-width: 1200px; 
-    margin: 0 auto; 
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-.left-column, .center-column, .right-column {
-    margin: 10px; 
+.left-column,
+.center-column,
+.right-column {
+    margin: 10px;
 }
 
 .left-column {
-    flex: 1; 
+    flex: 1;
 }
 
 .center-column {
-    flex: 2; 
+    flex: 2;
 }
 
 .right-column {
-    flex: 1; 
+    flex: 1;
 }
 
-.left-column img, .center-column img {
+.left-column img,
+.center-column img {
     width: 100%;
     height: auto;
     margin-bottom: 1em;
 }
 
-h2, h3, h4 {
+h2,
+h3,
+h4 {
     margin: 0.5em 0;
 }
 
