--- a/project/views/loginpage.ejs
+++ b/project/views/loginpage.ejs
@@ -9,26 +9,38 @@
 </head>
 <body>
   <div class="wrapper">
-    <form action="">
-    <h1>Welcome back, Tech freak! 👋</h1>
+    <form action="/login" method="post">
+      <h1>Welcome back, Tech freak! 👋</h1>
       <h4>Please Login to your account</h4>
+      <% if (locals.error) { %>
+        <div class="error-message"><%= error %></div>
+      <% } %>
       <div class="input-box">
-        <input type="text" placeholder="Username" required>
+        <input type="text" name="username" placeholder="Username" required>
         <i class='bx bxs-user'></i>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Password" required>
-        <i class='bx bxs-lock-alt' ></i>
+        <input type="password" name="password" placeholder="Password" required>
+        <i class='bx bxs-lock-alt'></i>
       </div>
       <div class="remember-forgot">
-        <label><input type="checkbox">Remember Me</label>
+        <label><input type="checkbox" class="show-password">Show Password</label>
         <a href="#">Forgot Password</a>
       </div>
       <button type="submit" class="btn">Login</button>
       <div class="register-link">
-        <p>Dont have an account? <a href="#">Make One</a></p>
+        <p>Don't have an account? <a href="/register">Make One</a></p>
       </div>
     </form>
   </div>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        var showPasswordCheckbox = document.querySelector('.show-password');
+        showPasswordCheckbox.addEventListener('change', function(event) {
+            var passwordInput = document.querySelector('input[name="password"]');
+            passwordInput.type = this.checked ? 'text' : 'password';
+        });
+    });
+  </script>
 </body>
 </html>
