--- a/project/views/registerpage.ejs
+++ b/project/views/registerpage.ejs
@@ -7,37 +7,60 @@
   <link rel="stylesheet" href="/css/register.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
 <body>
   <div class="wrapper">
-    <form action="">
-        <h1>Welcome aboard! 🎉</h1>
-        <h4>Please provide your Details</h4>
+    <form action="/register" method="post" onsubmit="return validateForm()">
+      <h1>Welcome aboard! 🎉</h1>
+      <h4>Please provide your details</h4>
+      <% if (locals.error) { %>
+        <div class="error-message"><%= error %></div>
+      <% } %>
       <div class="input-box">
-        <input type="email" placeholder="Email Address" required>
+        <input type="email" name="email" placeholder="Email Address" required>
         <i class="fas fa-envelope"></i>
       </div>
       <div class="input-box">
-        <input type="text" placeholder="User name" required>
-        <i class="fas fa-envelope"></i>
+        <input type="text" name="username" placeholder="User Name" required>
+        <i class="fas fa-user"></i>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Password" required>
-        <i class='bx bxs-lock-alt' ></i>
+        <input type="password" name="password" placeholder="Password" required>
+        <i class='bx bxs-lock-alt'></i>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Repeat Password" required>
-        <i class='bx bxs-lock-alt' ></i>
+        <input type="password" name="confirm_password" placeholder="Repeat Password" required>
+        <i class='bx bxs-lock-alt'></i>
       </div>
       <div class="remember-forgot">
-        <label><input type="checkbox">I agree to all Terms and Conditions</label>
+        <label><input type="checkbox" class="show-password">Show Password</label>
       </div>
-      <button type="submit" class="btn">Login</button>
+      <button type="submit" class="btn">Register</button>
       <div class="register-link">
-        <p>Already have an account? <a href="#">Login Now</a></p>
+        <p>Already have an account? <a href="/login">Login Now</a></p>
       </div>
     </form>
   </div>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        var showPasswordCheckbox = document.querySelector('.show-password');
+        showPasswordCheckbox.addEventListener('change', function(event) {
+            var passwordInputs = document.querySelectorAll('input[type="password"], input[type="text"]');
+            passwordInputs.forEach(function(input) {
+                input.type = showPasswordCheckbox.checked ? 'text' : 'password';
+            });
+        });
+    });
+
+    function validateForm() {
+        var password = document.querySelector('input[name="password"]').value;
+        var confirmPassword = document.querySelector('input[name="confirm_password"]').value;
+        if (password !== confirmPassword) {
+            alert('Passwords do not match.');
+            return false;
+        }
+        return true;
+    }
+  </script>
 </body>
 </html>
