hashed the password

--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -48,6 +48,6 @@
     <a href="/info">About Us</a>
     <a href="/products">Product Details</a>
     <% if (user) { %> <!-- Use 'user' directly from res.locals -->
-        <a href="/logout">Logout</a>
+        <a href="/logout" class="logout-button">Logout</a>
     <% } %>
 </nav>
