--- a/project/public/css/styles.css
+++ b/project/public/css/styles.css
@@ -105,6 +105,10 @@ nav a:hover{
     font-weight: bold;
 }
 
+.logout-button{
+    background-color: black;
+}
+
 .user-greeting{
     font-size: 24px;
     color: white;
