--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <div class="alert">
-    Note: Due to large number of orders, please expect 1~2 days delay in delivery.
+    Note: Due to a large number of orders, please expect 1~2 days delay in delivery.
 </div>
 
 <div class="social-bar">
@@ -24,30 +24,31 @@
 
 <header>
     <div class="logo">
-        <img src="/images/12.PNG" alt="Error">
+        <img src="/images/12.PNG" alt="TechCraft Logo">
     </div>
-
     <div class="header-content">
         <h1>TechCraft</h1>
         <h3>Crafting Your Digital Masterpiece, One Component at a Time!</h3>
     </div>
-
     <div class="search-bar">
         <input type="text" placeholder="Search...">
         <button type="button">Search</button>
     </div>
-
 </header>
 
 <nav>
     <a href="/">Home</a>
     <a href="/product">Products</a>
     <a href="#">PC builder</a>
-    <a href="/contactus">Contact US</a>
+    <a href="/contactus">Contact Us</a>
     <a href="/reviewus">Review Us</a>
     <a href="/info">About Us</a>
     <a href="/products">Product Details</a>
-    <% if (user) { %> <!-- Use 'user' directly from res.locals -->
+    <% if (user) { %>
         <a href="/logout" class="logout-button">Logout</a>
+    <% } else { %>
+        <a href="/login" class="login-button">Login</a>
     <% } %>
+
+    <a href="/cart">Cart</a>
 </nav>
