added search functionality

--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -50,5 +50,7 @@
         <a href="/login" class="login-button">Login</a>
     <% } %>
 
+
     <a href="/cart">Cart</a>
+    <a href="/search">Search</a>
 </nav>
